# HBM

./: .gitignore  BLOCKCHAIN_INFO.md  CHANGELOG.md  PHAM_BLOCKCHAIN_LOG.md  README.md  README_EN.md  SIGNATURE.sha256  WORK_LOG.md  pyproject.toml
docs/: 00_CONCEPT.md  00_CONCEPT_EN.md  01_LAYER_STACK.md  01_LAYER_STACK_EN.md  02_FORMULAS.md  02_FORMULAS_EN.md  03_OPERATIONS_RUNBOOK.md  03_OPERATIONS_RUNBOOK_EN.md  04_INCIDENT_RESPONSE_MATRIX.md  04_INCIDENT_RESPONSE_MATRIX_EN.md
examples/: hbm_stream_input.jsonl
hbm_system/: __init__.py  audit_bridge.py  bridge.py  contracts.py  controller.py  dynamics.py  edge_policy.py  integration.py  memory_adapter.py  observer.py  physics.py  presets.py  protection.py  runtime.py
scripts/: high_load_thermal_stress_report.py  run_hbm_audit_loop.py  run_hbm_stream_loop.py
tests/: conftest.py  test_hbm_system.py  test_high_load_report.py  test_run_hbm_audit_loop.py  test_run_hbm_stream_loop.py  test_syd_drift_bridge.py
