[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hbm-system-engine"
version = "1.11.1"
description = "HBM package/system-level simulation engine with thermal, TSV, bandwidth, and arbitration models."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["hbm_system*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
